@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.20894 (27 Aug 2012)
+
+  27 Aug 2012; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.20894.ebuild,
+  -portage-2.2.01.20757.ebuild:
+  Version bump, matches 2.2.0_alpha123
+
   20 Aug 2012; Fabian Groffen <grobian@gentoo.org> portage-2.2.01.20837.ebuild:
   Up the requirement for bash to 4.1, since redirect_alloc_fd better relies on
   bash' built-in to find a free filedescriptor than a rather Linux-specific way
